reworked header, trailer and downloads

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,68 +1,19 @@
-#logo a {
-	float: left;
-	text-decoration:none;
-	font-family:Helvetica;
-	font-size:150%;
-	color:royalblue;
-}
+#topmenu {}
 
-#logo a h1 {
-	margin:0;
-	padding:0;
-}
-
-#logo a:visited {
-	text-decoration:none;
-	font-family:Helvetica;
-	font-size:150%;
-	color:royalblue;
-}
-
-#logo a:visited {
-	text-decoration:none;
-	font-family:Helvetica;
-	font-size:150%;
-	color:royalblue;
-}
-
-#logo a:hover {
-	text-decoration:none;
-	font-family:Helvetica;
-	font-size:150%;
-	color:royalblue;
-}
-
-#logo a:active {
-	text-decoration:none;
-	font-family:Helvetica;
-	font-size:150%;
-	color:royalblue;
-}
-
-#topmenu {
-	width:100%;
-	vertical-align:bottom;
-}
-
-#topmenu-buttons {
-	width:90%;
-	vertical-align:bottom;
-}
+#topmenu-buttons {}
 
 #topmenu-buttons ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	vertical-align:bottom;
 }
 
 #topmenu-buttons li {
 	float: left;
 	margin: 0 0.15em;
-	vertical-align:bottom;
 }
 
-#topmenu-buttons li a {;
+#topmenu-buttons li a {
 	height: 2em;
 	line-height: 2em;
 	float: left;
@@ -72,15 +23,14 @@
 	color: #0d2474;
 	text-decoration: none;
 	text-align: center;
-	vertical-align:bottom;
 
 }
 
 #page {
-	clear:both;
+	clear: both;
 }
 
-#page-button a {;
+#page-button a {
 	height: 2em;
 	line-height: 2em;
 	width: 7em;
@@ -90,5 +40,3 @@
 	text-decoration: none;
 	text-align: center;
 }
-
-
