--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -48,3 +48,10 @@ copyrightNotice {
 	text-decoration: none;
 	text-align: center;
 }
+
+#invisibleBorders table,
+th,
+td {
+	border: 1px solid white;
+	text-align: right;
+}
